[tool.poetry]
name = "speculativedecoding"
version = "0.1.0"
description = ""
authors = ["Harrison <zhuyiyun060209@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
transformers = ">=4.57.3,<5.0.0"
torch = ">=2.0.0"
ipykernel = "^7.1.0"
gradio = "^6.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
